--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
             <img src="images/pngwing 8.png" alt="">
         </div>
         </section>
+        <section class="section social">
+            <div class="section-title">Instagram</div>
+            <div class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</div>
+            <div class="social-photo-container">
+                <img src="images/Flower 01.png" alt="">
+                <img src="images/Rectangle 4.png" alt="" class="social-photo">
+                <img src="images/Rectangle 5.png" alt="" class="social-photo">
+                <img src="images/Rectangle 6.png" alt="" class="social-photo">
+            </div>
+        </section>
+        <section class="section email-section-container">
+            <div class="section-title">Get The Latest Deals</div>
+            <div class="section-description">$30 coupon for first shopping</div>
+            <div class="email-section"><input type="email" placeholder="Enter your email here...." name="" id=""><input type="submit" value="Subscribe"
+                class="btn-primary"></div>
+        </section>
     </main>
     <footer>
 
