footer section done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
+
+    <!-- header section -->
     <header>
+
+        <!-- banner section -->
+
         <div class="banner-container">
             <div class="banner-text">
                 <h1 class="banner-title">
@@ -32,7 +37,13 @@
             </div>
         </div>
     </header>
+    
+        <!-- main section -->
+    
     <main>
+
+        <!-- features section -->
+
         <section class="section features">
             <h3 class="section-title">Our Featured Flowers</h3>
             <p class="section-description">It is a long established fact that a reader will be distracted by the
@@ -52,6 +63,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- services section -->
+
         <section class="section services">
             <div class="services-container">
                 <div class="services-group">
@@ -69,6 +83,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- offer section -->
+
         <section class="offer">
             <div class="offer-text">
             <h3 class="offer-title">Hot Deal ! Sale Up To 25% <span>Off</span></h3>
@@ -79,9 +96,12 @@
             <img src="images/pngwing 8.png" alt="">
         </div>
         </section>
+
+        <!-- social section -->
+
         <section class="section social">
-            <div class="section-title">Instagram</div>
-            <div class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</div>
+            <h3 class="section-title">Instagram</h3>
+            <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
             <div class="social-photo-container">
                 <img src="images/Flower 01.png" alt="">
                 <img src="images/Rectangle 4.png" alt="" class="social-photo">
@@ -89,15 +109,25 @@
                 <img src="images/Rectangle 6.png" alt="" class="social-photo">
             </div>
         </section>
+
+        <!-- email section -->
+
         <section class="section email-section-container">
-            <div class="section-title">Get The Latest Deals</div>
-            <div class="section-description">$30 coupon for first shopping</div>
+            <h3 class="section-title">Get The Latest Deals</h3>
+            <p class="section-description">$30 coupon for first shopping</p>
             <div class="email-section"><input type="email" placeholder="Enter your email here...." name="" id=""><input type="submit" value="Subscribe"
                 class="btn-primary"></div>
         </section>
     </main>
-    <footer>
 
+    <!-- footer section -->
+
+    <footer>
+        <div class="footer-container">
+            <h3 class="footer-title">Flower<Span>Shop</Span></h3>
+            <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <small class="copy">@2020-2023, FlowerShop.com. All rights reserved. </small>
+        </div>
     </footer>
 </body>
 
